--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@components/*": [
+        "./components/*"
+      ],"@pages/*": [
+        "./pages/*"
+      ],
+    },
     "target": "es5",
     "lib": [
       "dom",
@@ -18,9 +26,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"],
 }
